<resources>
    <string name="app_name">HoroscopoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horoscopo">Horóscopo</string>
    <string name="suerte">Suerte</string>
    <string name="lector_mano">Lector palma</string>
    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpio">Escorpio</string>
    <string name="sagitario">Sagitario</string>
    <string name="capricornio">Capricornio</string>
    <string name="aquario">Aquario</string>
    <string name="piscis">Piscis</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Piscis</string>
    <string name="rango_aries">"21 Mar. - 20 de Abr."</string>
    <string name="rango_tauro">"21 Abr. - 21 de May."</string>
    <string name="rango_geminis">"22 May. - 21 de Jun."</string>
    <string name="rango_cancer">"22 Jun. - 23 de Jul."</string>
    <string name="rango_leo">"24 Jul. - 23 de Ago."</string>
    <string name="rango_virgo">"24 Ago. - 23 de Sep."</string>
    <string name="rango_libra">"24 Sep. - 23 de Oct."</string>
    <string name="rango_escorpio">"24 Oct. - 22 de Nov."</string>
    <string name="rango_sagitario">"23 Nov. - 22 de Dic."</string>
    <string name="rango_capricornio">"23 Dic. - 20 de Ene."</string>
    <string name="rango_aquario">"21 Ene. - 19 de Feb."</string>
    <string name="rango_piscis">"20 Feb. - 20 de Mar."</string>
    <string name="compartir">Compartir</string>
    <string name="suerte_0">"Una nueva oportunidad traerá un éxito inesperado en tu camino."</string>
    <string name="suerte_1">"Conocerás una persona que cambiará tu vida para bien."</string>
    <string name="suerte_2">"Un viaje excitante te espera en el futuro cercano."</string>
    <string name="suerte_3">"Un proyecto creativo te llevará al reconocimiento y a la autorealización."</string>
    <string name="suerte_4">"Enfrentarás un gran desafío del cual emergerás fortalecido."</string>
    <string name="suerte_5">"Se observa abundancia financiera en el horizonte; se paciente."</string>
    <string name="suerte_6">"Un viejo amigo perdido se reconectará pronto."</string>
    <string name="suerte_7">"Una gran decisión te encaminará al crecimiento personal y felicidad."</string>
    <string name="suerte_8">"Un sueño que habías tenido por años por fin se volverá realidad."</string>
    <string name="suerte_9">"Confia en tu intuición; te guiará a través del éxito."</string>
    <string name="suerte_10">"Un talento escondido emergerá, brindandote nuevas oportunidades."</string>
    <string name="suerte_11">"Un cambio de rutina te encaminará en aventuras inesperadas."</string>
    <string name="suerte_12">"Alguien de tu pasado jugará un rol importante en tu futuro."</string>
    <string name="suerte_13">"Un encuentro fortuito te guiará a una conexión profunda y duradera."</string>
    <string name="suerte_14">"Recibirás un regalo sorprendente que le brindará alegría a tu vida."</string>
    <string name="suerte_15">"Un viaje inesperado te guiará a una transformación personal."</string>
    <string name="suerte_16">"El trabajo duro finalmente dará sus frutos con un merecido premio."</string>
    <string name="suerte_17">"Un nuevo capítulo en tu vida comenzará, nuevas posibilidades se acercan."</string>
    <string name="suerte_18">"Confía en el momento en que los eventos suceden; todo tiene un motivo."</string>
    <string name="suerte_19">"Acepta los cambios que se acercan en tu camino; te guiarán a grandes cosas."</string>
    <string name="suerte_20">"un golpe de suerte te guiará a través del camino de la prosperidad."</string>
    <string name="suerte_21">"Una oportunidad inesperada golpeará tu puerta; preparate para tomarla."</string>
    <string name="suerte_22">"Un periodo de crecimiento y descubrimiento personal se avistan en el horizonte."</string>
    <string name="suerte_23">"Encontrarás inspiración en el lugar menos pensado."</string>
    <string name="suerte_24">"Una nueva amistad traerá risas y alegría a tu vida."</string>
    <string name="suerte_25">"Tu determinación te guiará a una gran hazaña."</string>
    <string name="suerte_26">"Una importante decisión te llevará a un futuro brillante."</string>
    <string name="suerte_27">"Un viejo deseo finalmente se manifestará por si solo."</string>
    <string name="suerte_28">"Descubrirás una nueva pasión que encenderá tu alma."</string>
    <string name="suerte_29">"Los desafios que estás enfrentando serán los escalones al éxito."</string>
    <string name="suerte_30">"Planes de un viaje inesperado ampliarán tus horizontes."</string>
    <string name="suerte_31">"Un giro sorpresivo del destino traerá bendiciones inesperadas."</string>
    <string name="luck_0">"A new opportunity will bring unexpected success your way."</string>
    <string name="luck_1">"You'll meet someone who will change your life for the better."</string>
    <string name="luck_2">"An exciting journey awaits you in the near future."</string>
    <string name="luck_3">"A creative project will lead to recognition and fulfillment."</string>
    <string name="luck_4">"You'll overcome a significant challenge and emerge stronger."</string>
    <string name="luck_5">"Financial abundance is on the horizon; stay patient."</string>
    <string name="luck_6">"A long-lost friend will reconnect with you soon."</string>
    <string name="luck_7">"A big decision will lead to personal growth and happiness."</string>
    <string name="luck_8">"A dream you've had for years will finally come true."</string>
    <string name="luck_9">"Trust your intuition; it will guide you toward success."</string>
    <string name="luck_10">"A hidden talent will emerge, bringing new opportunities."</string>
    <string name="luck_11">"A change in your routine will lead to unexpected adventures."</string>
    <string name="luck_12">"Someone from your past will play a significant role in your future."</string>
    <string name="luck_13">"A serendipitous encounter will lead to a deep and lasting connection."</string>
    <string name="luck_14">"You'll receive a surprising gift that brings joy to your life."</string>
    <string name="luck_15">"An unexpected journey will lead to personal transformation."</string>
    <string name="luck_16">"Your hard work will pay off with a well-deserved reward."</string>
    <string name="luck_17">"A new chapter in your life will begin, filled with possibilities."</string>
    <string name="luck_18">"Trust in the timing of events; everything happens for a reason."</string>
    <string name="luck_19">"Embrace the change coming your way; it will lead to great things."</string>
    <string name="luck_20">"A stroke of luck will lead you toward a path of prosperity."</string>
    <string name="luck_21">"A unexpected opportunity will knock on your door; be ready to seize it."</string>
    <string name="luck_22">"A period of personal growth and self-discovery is on the horizon."</string>
    <string name="luck_23">"You'll find inspiration in the most unlikely of places."</string>
    <string name="luck_24">"A new friendship will bring laughter and joy into your life."</string>
    <string name="luck_25">"Your determination will lead to a major achievement."</string>
    <string name="luck_26">"An important decision will lead to a brighter future."</string>
    <string name="luck_27">"A long-held wish will finally manifest itself."</string>
    <string name="luck_28">"You'll discover a new passion that ignites your soul."</string>
    <string name="luck_29">"A challenge you face now will become a stepping stone to success."</string>
    <string name="luck_30">"Unexpected travel plans will broaden your horizons."</string>
    <string name="luck_31">"A surprising twist of fate will bring unexpected blessings."</string>
    <string name="titulo_ayuda">Consejos, tips y algo más…</string>
    <string name="titulo_cinturon_venus">El Cinturón de Venus</string>
    <string name="titulo_linea_destino">La Línea del Destino</string>
    <string name="titulo_linea_cabeza">La Línea de la Cabeza</string>
    <string name="titulo_linea_salud">La Línea de la Salud</string>
    <string name="titulo_linea_corazon">La Línea del Corazón</string>
    <string name="titulo_linea_intuicion">La Línea de la Intuición</string>
    <string name="titulo_linea_vida">La Línea de la Vida</string>
    <string name="titulo_linea_matrimonio">La Línea del Matrimonio</string>
    <string name="titulo_linea_marte">La Línea del Marte</string>
    <string name="titulo_linea_sol">La Línea del Sol</string>
    <string name="titulo_linea_brazalete">Las Líneas del Brazalete</string>
    <string name="Consejos_y_tips">Tip 1: \n
        Recuerda que la ilustración es una guía para que puedas identificar las lineas en tu mano.\n
        Tip 2: \n
        Todos tenemos manos diferentes, por lo tanto no es necesario que intentes alinear la imagen a la perfección.\n
        Tip 3: \n
        Cuando quieras sobreponer la imagen de la cámara puedes intentar entrecerrar la mano,\n
        esto facilitará formar los pliegues que quieres ver.
    </string>
    <string name="Titulo_Info_quiromancia">
         ¿Qué debemos saber de la Quiromancia?
    </string>
    <string name="Info_quiromancia">
        La quiromancia consiste en la práctica de la evaluación del carácter o el futuro de una
        persona por la lectura de la palma de la mano. Varias líneas y montes a las que
        se sugieren interpretaciones por su tamaño relativo, cualidades e intersecciones.
        Las líneas se dividen en: principales y secundarias, cada una de ellas nos transmite
        la información del elemento que representan. \n
        Nos indican como fluyen los acontecimientos a lo largo de nuestra vida
        y como nuestro pensamiento se encamina hacia determinado fin.
        Pueden cambiar dependiendo de la forma en que se actúa, estas desaparecen o se reafirman,
        cambian su curso o se hacenmás profundas y homogéneas. Por ello a lo largo de la vida las
        líneas cambian, incluso pueden aparecer nuevas líneas.
        Las líneas deben de ser firmes, homogéneas y claras; cualquier isla o rompimiento, o
        si ésta se presenta en forma de cadena o deshilachada, alterará su valor. El curso limpio y
        claro de una línea reafirmará el valor del monte y él de la línea misma. En general, suele
        decirse que, cuando las líneas de la mano que forman una especie deletra M en su centro son
        claras y precisas, sobre la persona brillan perspectivas de futuro favorables. Si las líneas
        son confusas, discontinuas o poco visibles, ello suele considerarse un síntoma de mal augurio.
        Las cuatro líneas que forman esa M central de la mano suelen conocerse con los nombres de
        líneas principales. \n
    </string>
    <string name="Titulo_Lineas_quiromancia">
         Lineas Principales y Secundarias
    </string>
    <string name="Info_Lineas_quiromancia">
        Las líneas principales indican como van a ir sucediendo los distintos acontecimientos en el
        transcurso de nuestra vida. Ellas son: la línea de la vida, la del corazón y la de la cabeza.
        A las líneas del destino o secundarias se les dieron el nombre de los sietes planetas tradicionales:
        Venus, Júpiter, Saturno, Marte, Mercurio, Sol, Luna
    </string>
</resources>