<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D6D6D6"
    tools:context=".ui.lectorPalma.TipsYConsejosFragment">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Aprende a leer tu mano"
        android:textColor="@color/heart"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        style="@style/DetalleQuiromancia" />
    <View
        android:layout_width="310dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivLineaConsultada"
                android:layout_width="400dp"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/palmistry"
                />
            <TextView
                android:id="@+id/tvTituloTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Consejos, tips y algo más…"
                android:textColor="@color/heart"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/DetalleQuiromancia"/>

            <TextView
                android:id="@+id/tvDetalleTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/Consejos_y_tips"
                android:textSize="15sp"
                style="@style/DetalleQuiromancia"/>

            <TextView
                android:id="@+id/tvTituloQuiromancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Titulo_Info_quiromancia"
                android:textColor="@color/heart"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/DetalleQuiromancia"/>

            <TextView
                android:id="@+id/tvDetalleQuiromancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/Info_quiromancia"
                android:textSize="15sp"
                style="@style/DetalleQuiromancia"/>

            <TextView
                android:id="@+id/tvTituloLineas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Titulo_Lineas_quiromancia"
                android:textColor="@color/heart"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/DetalleQuiromancia"/>

            <TextView
                android:id="@+id/tvDetalleLineas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/Info_Lineas_quiromancia"
                android:textSize="15sp"
                style="@style/DetalleQuiromancia"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>